# NCdesktop-v2

.cursor/rules/: liquid-glass-ui-charter.mdc  project-development-charter.mdc
website/: index.html  package.json
website/.claude/: launch.json
website/src/: App.css  App.jsx  index.css
反向导出/: NCdesktop-UI布局详细提取.md  NCdesktop-软件PRD-详细版.md
废弃/: (anti) NCdesktop-并行开发策略.md  （gemi）NCdesktop-20步开发框架宪章.md
项目启动/NCdesktop/: .env.example  .gitignore  打包命令.rtf  (+10 more)
项目启动/NCdesktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
项目启动/NCdesktop/src-tauri/capabilities/: default.json
项目启动/NCdesktop/src-tauri/macos/: Info.plist
项目启动/NCdesktop/src-tauri/resources/: runtime-manifest.json
项目启动/NCdesktop/src-tauri/src/: lib.rs
项目启动/NCdesktop/src-tauri/src/commands/: asset.rs  conversion.rs  dropzone.rs  export.rs  extraction.rs  knowledge.rs  library.rs  llm.rs  mod.rs  outbound.rs  source_view.rs  sync.rs  workspace_folders.rs
项目启动/NCdesktop/src-tauri/src/db/: asset.rs  migration.rs  mod.rs  tag.rs
项目启动/NCdesktop/src-tauri/src/extraction/: mod.rs  models.rs  scheduler.rs
项目启动/NCdesktop/src-tauri/src/extraction/extractors/: audio_asr.rs  audio_asr_iflytek.rs  image_ocr.rs  markitdown.rs  mod.rs  pdf_scan.rs
项目启动/NCdesktop/src-tauri/src/llm/: chat.rs  classify_parse.rs  client.rs  mod.rs  prompt_runtime.rs  prompts.rs
项目启动/NCdesktop/src-tauri/src/mcp/: mod.rs  server.rs
项目启动/NCdesktop/src-tauri/src/models/: asset.rs
项目启动/NCdesktop/src-tauri/src/utils/: mod.rs
项目启动/NCdesktop/src-tauri/tests/: live_api.rs  user_prompt_e2e.rs  workspace_folders_integration.rs
(+418 files in other folders)
